--- a/app/views/create-account/business-unit.html
+++ b/app/views/create-account/business-unit.html
@@ -26,6 +26,9 @@
               classes: "govuk-fieldset__legend--l"
             }
           },
+          hint: {
+            text: "Select where the account is to be created"
+          },
           items: [
             {
               value: "Avon and Somerset",
