--- a/app/views/create-account/task-list.html
+++ b/app/views/create-account/task-list.html
@@ -15,62 +15,15 @@
 
 {% block content %}
   <div class="govuk-grid-row">
-
     <div class="govuk-grid-column-two-thirds">
       
       <span class="govuk-caption-l">{{ data['businessUnit'] }}</span>
       <h1 class="govuk-heading-l govuk-!-margin-bottom-6">{{ pageName }}</h1>
 
-      <h3 class="govuk-heading-s govuk-!-margin-bottom-2 govuk-visually-hidden">Account details</h3>
-      
-      <p class="govuk-body govuk-!-font-weight-bold govuk-!-margin-bottom-2">Individual only</p>
-      <p class="govuk-body-s govuk-!-margin-bottom-2">Local Justice Area (LJA): {{ data['ljaCode'] }}</p>
-      <p class="govuk-body-s govuk-!-margin-bottom-2">LJA reference: FT34567
-      </p>
+      <p class="govuk-body govuk-!-margin-bottom-2">Originating LJA: {{ data['ljaCode'] }}</p>
+      <p class="govuk-body govuk-!-margin-bottom-2">Reference number: {{ data['ljaReferenceCode'] or 'Not provided'}}</p>
+      <p class="govuk-body govuk-!-margin-bottom-2">Defendant type: {{ data['defendantType'] or 'Individual only'}}</p>
 
-
-      <!-- <dl class="govuk-summary-list govuk-summary-list--no-border">
-        
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__key govuk-body-s" style="width: 22%; padding-bottom: govuk-spacing(0);">
-            Business area
-          </dt>
-          <dd class="govuk-summary-list__value govuk-body-s" style="padding-bottom: govuk-spacing(0);">
-            Avon and Somerset
-          </dd>
-          <dd class="govuk-summary-list__actions govuk-body-s">
-            <a class="govuk-link govuk-link--no-visited-state" href="#">Change<span class="govuk-visually-hidden"> business area</span></a>
-          </dd>
-        </div>
-
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__key govuk-body-s">
-            Local Justice Area
-          </dt>
-          <dd class="govuk-summary-list__value govuk-body-s">
-            
-            <p class="govuk-body-s">Cambridgeshire Magistrates' Court (1949)</p>
-            <p class="govuk-body-s">Reference: 1234567</p>
-          </dd>
-          <dd class="govuk-summary-list__actions govuk-body-s">
-            <a class="govuk-link govuk-link--no-visited-state" href="#">Change<span class="govuk-visually-hidden"> Local Justice Area</span></a>
-          </dd>
-        </div>
-
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__key govuk-body-s">
-            Defendant type
-          </dt>
-          <dd class="govuk-summary-list__value govuk-body-s">
-            Individual only
-          </dd>
-          <dd class="govuk-summary-list__actions govuk-body-s">
-            <a class="govuk-link govuk-link--no-visited-state" href="#">Change<span class="govuk-visually-hidden"> Defendant type</span></a>
-          </dd>
-        </div>
-
-
-      </dl> -->
 
     </div>  
   </div>  
@@ -81,19 +34,42 @@
 
       <h2 class="govuk-heading-m">Defendant details</h2>
 
-      {% set completedStatus = {
-        text: "Completed"
-      } %}
+      <!-- <p class="govuk-body">Individual only.</p> -->
 
-      {% set incompleteStatus = {
+
+      {% set notStarted = {
         tag: {
-          text: "Incomplete",
+          text: "Not provided",
           classes: "govuk-tag--blue"
         }
       } %}
 
-      {# To switch between the completed and incomplete statues, use some inline logic within the component below, like this: "status: (completedStatus if ... else incompleteStatus)" #}
+      {% set inProgress = {
+        tag: {
+          text: "Incomplete",
+          classes: "govuk-tag--light-blue"
+        }
+      } %}
 
+      {% set completedStatus = {
+        text: "Completed"
+      } %}
+
+      <!-- CONDITIONS FOR STATUS TAGS -->
+      {% if (data['PDstatus'] == 'Completed') %}
+      {% set taskComplete = {
+          text: "Completed"
+      } %}
+      {% else %}
+      {% set taskComplete = {
+        tag: {
+          text: "Not provided",
+          classes: "govuk-tag--blue"
+        }
+      } %}
+      {% endif %}
+
+      <!-- TASK LIST -->
       {{ govukTaskList({
         idPrefix: "second-section",
         items: [
@@ -101,49 +77,32 @@
             title: {
               text: "Personal details"
             },
-            href: "#",
-            status: {
-              tag: {
-                text: "Not provided",
-                classes: "govuk-tag--blue"
-              }
-            }
+            href: './personal-details/check-answers' if data['personal-details-end'] == 'true' else './personal-details/personal-details',
+            status: taskComplete
           },
+
           {
             title: {
               text: "Contact preferences"
             },
             href: "#",
-            status: {
-              tag: {
-                text: "Not provided",
-                classes: "govuk-tag--blue"
-              }
-            }
+            status: notStarted
           },
+
           {
             title: {
               text: "Employer"
             },
             href: "#",
-            status: {
-              tag: {
-                text: "Not provided",
-                classes: "govuk-tag--blue"
-              }
-            }
+            status: notStarted
           },
+
           {
             title: {
               text: "Vehicle details"
             },
             href: "#",
-            status: {
-              tag: {
-                text: "Not provided",
-                classes: "govuk-tag--blue"
-              }
-            }
+            status: notStarted
           }
           
         ]
@@ -181,89 +140,35 @@
         ]
       }) }}
 
-      <h2 class="govuk-heading-m govuk-!-margin-top-5">Final check</h2>
+      <h2 class="govuk-heading-m govuk-!-margin-top-5">Review and save</h2>
 
-      {{ govukTaskList({
-        idPrefix: "second-section",
-        items: [
-          {
-            title: {
-              text: "Save as draft account"
-            },
-            status: {
-              text: "Cannot start yet",
-              classes: "govuk-task-list__status--cannot-start-yet"
-            }
-          }
-        ]
-      }) }}
+      <p class="govuk-body">Check that all required fields have been entered before you can save a draft.</p>
 
-      <!-- <div class="govuk-!-margin-top-5">
+      <div class="govuk-!-margin-top-5">
         {{ govukButton({ text: "Save as draft", href: "#" }) }}
-      </div> -->
+      </div>
 
     </div>
     
     <!-- <div  class="govuk-grid-column-one-third" >
-      <div style="background-color: #F3F2F1; padding: 15px; border-top: 3px solid #1D70B8;" >
-        <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Account details</h3>
-        <dl class="govuk-summary-list govuk-summary-list--no-border">
-          
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key govuk-body-s">
-              Business area
-            </dt>
-            <dd class="govuk-summary-list__value govuk-body-s">
-              Avon and Somerset
-            </dd>
-            <dd class="govuk-summary-list__actions govuk-body-s">
-              <a class="govuk-link govuk-link--no-visited-state" href="#">Change<span class="govuk-visually-hidden"> business area</span></a>
-            </dd>
-          </div>
-  
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key govuk-body-s">
-              Local Justice Area
-            </dt>
-            <dd class="govuk-summary-list__value govuk-body-s">
-              Cambridgeshire Magistrates' Court (1949)
-            </dd>
-            <dd class="govuk-summary-list__actions govuk-body-s">
-              <a class="govuk-link govuk-link--no-visited-state" href="#">Change<span class="govuk-visually-hidden"> Local Justice Area</span></a>
-            </dd>
-          </div>
-  
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key govuk-body-s">
-              LJA reference
-            </dt>
-            <dd class="govuk-summary-list__value govuk-body-s">
-              1234567
-            </dd>
-            <dd class="govuk-summary-list__actions govuk-body-s">
-              <a class="govuk-link govuk-link--no-visited-state" href="#">Change<span class="govuk-visually-hidden"> LJA reference</span></a>
-            </dd>
-          </div>
-  
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key govuk-body-s">
-              Defendant type
-            </dt>
-            <dd class="govuk-summary-list__value govuk-body-s">
-              Individual only
-            </dd>
-            <dd class="govuk-summary-list__actions govuk-body-s">
-              <a class="govuk-link govuk-link--no-visited-state" href="#">Change<span class="govuk-visually-hidden"> Defendant type</span></a>
-            </dd>
-          </div>
-  
-  
-        </dl>
-      
-      </div>
-  
-        
-  
+      {{ xGovukRelatedNavigation({
+        sections: [{
+          items: [{
+            text: "Related link",
+            href: "#"
+          }, {
+            text: "Related link",
+            href: "#"
+          }],
+          subsections: [{
+            title: "Subsection",
+            items: [{
+              text: "Related link",
+              href: "#"
+            }]
+          }]
+        }]
+      }) }}
     </div> -->
     
   </div>
