--- a/app/views/create-account/personal-details/personal-details.html
+++ b/app/views/create-account/personal-details/personal-details.html
@@ -16,7 +16,7 @@
       <span class="govuk-caption-l">Defendant details</span>
       <h1 class="govuk-heading-l">{{ pageName }}</h1>
 
-      <form method="post" novalidate action="address">
+      <form method="post" novalidate action="/personal-details-question">
 
         <!-- TITLE -->
         <div>
